--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0",
-    "three-globe": "^2.33.0"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
